Estado entrega 10 peticiones